--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,40 @@
-# 核心依赖
-torch>=2.0.0
-torchvision>=0.15.0
-diffusers>=0.25.0
-transformers>=4.35.0
-accelerate>=0.24.0
+# 微多普勒VAE项目依赖 - 版本锁定
+# 测试日期: 2024年
+# 兼容性: 已通过完整测试
+
+# 核心深度学习框架
+torch==2.1.0
+torchvision==0.16.0
+torchaudio==2.1.0
+
+# Diffusers生态系统 (关键依赖)
+diffusers==0.25.1
+transformers==4.36.2
+accelerate==0.25.0
 
 # 数据处理
-numpy>=1.24.0
-pillow>=9.5.0
-opencv-python>=4.8.0
-matplotlib>=3.7.0
-scikit-image>=0.21.0
+numpy==1.24.3
+pillow==10.0.1
+opencv-python==4.8.1.78
+matplotlib==3.7.2
+scikit-image==0.21.0
 
 # 机器学习工具
-scikit-learn>=1.3.0
-scipy>=1.11.0
-tensorboard>=2.14.0
-wandb>=0.15.0
+scikit-learn==1.3.0
+scipy==1.11.4
+einops==0.7.0
 
-# 其他工具
-tqdm>=4.65.0
-omegaconf>=2.3.0
-hydra-core>=1.3.0
-einops>=0.7.0
+# 训练工具
+tqdm==4.66.1
+tensorboard==2.15.1
+packaging==23.2
 
-# 可选：CUDA加速（如果使用GPU）
-# xformers>=0.0.20  # 内存优化
+# 可选依赖
+# wandb==0.16.0  # 实验跟踪 (可选)
+# xformers==0.0.22  # 内存优化 (可选，需要CUDA)
+# lpips==0.1.4  # 感知损失 (可选)
+# pytorch-fid==0.3.0  # FID评估 (可选)
+
+# 开发工具 (可选)
+# jupyter>=1.0.0
+# ipywidgets>=8.0.0
