Major refactor: Simplify project structure and improve VAE training
 Key improvements:
- Simplified project structure: removed redundant documentation files
- Improved VAE training quality with Stable Diffusion standards
- Enhanced loss function configuration for better reconstruction

 Removed files:
- Multiple redundant documentation files (KAGGLE_README.md, TRAINING_GUIDE.md, etc.)
- Complex multi-stage training scripts (train_kaggle.py)
- Unused setup scripts

 Updated files:
- README.md: Consolidated all documentation into single file
- train_celeba_standard.py: Improved loss weights and training parameters
- training/train_vae.py: Better learning rate scheduling and loss balancing
- requirements.txt: Added lpips for perceptual loss
- check_vae.py: Simplified VAE quality checking

 New files:
- install_lpips.py: Easy installation of perceptual loss library

 Training improvements:
- KL weight: 1e-6  1e-4 (Stable Diffusion standard)
- Perceptual loss: disabled  enabled (weight 1.0)
- Frequency loss: 0.05  0.1 (better time-frequency preservation)
- Training epochs: 30  50 (better convergence)
- Added warmup learning rate scheduling

Expected PSNR improvement: 12.65 dB  25+ dB

--- a/requirements.txt
+++ b/requirements.txt
@@ -29,10 +29,12 @@ tqdm==4.66.1
 tensorboard==2.15.1
 packaging==23.2
 
+# 感知损失 (VAE训练必需)
+lpips==0.1.4
+
 # 可选依赖
 # wandb==0.16.0  # 实验跟踪 (可选)
 # xformers==0.0.22  # 内存优化 (可选，需要CUDA)
-# lpips==0.1.4  # 感知损失 (可选)
 # pytorch-fid==0.3.0  # FID评估 (可选)
 
 # 开发工具 (可选)
